# 3784932874

./: .gitignore  CMakeLists.txt  README.md  build.bash  camera.py
config/: config.json
include/smartcar/: ai_detector.hpp  bridge_detector.hpp  camera.hpp  charging_detector.hpp  communicator.hpp  config.hpp  crossing_detector.hpp  crosswalk_detector.hpp  danger_detector.hpp  motion_controller.hpp  motion_data.hpp  rescue_detector.hpp  restaurant_detector.hpp  ring_detector.hpp  temp_stop_detector.hpp  utils.hpp
manuals/: 巡线思路.md
src/: main.cpp  screenshot.cpp
src/smartcar/: ai_detector.cpp  bridge_detector.cpp  camera.cpp  charging_detector.cpp  communicator.cpp  crossing_detector.cpp  crosswalk_detector.cpp  danger_detector.cpp  motion_controller.cpp  motion_data.cpp  rescue_detector.cpp  restaurant_detector.cpp  ring_detector.cpp  temp_stop_detector.cpp  utils.cpp
